# rust-everywhere

./: Cargo.toml
.github/workflows/: CI.yml
examples/python/: pyproject.toml
examples/python/src/rust_everywhere_python_example.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/python/src/symmetry/: __init__.py
examples/python/src/symmetry/tests/: test_symmetry.py
examples/python/src/tests/: test_symmetry.py
examples/web/: package-lock.json
python/: Cargo.toml  pyproject.toml
python/.github/workflows/: CI.yml
python/src/: lib.rs
rust/: Cargo.toml
rust/src/: main.rs
src/: lib.rs
wasm/: Cargo.toml  publish.sh
wasm/src/: lib.rs
wasm/tests/: node.rs  web.rs
web/: index.js  package.json
